--- a/doodalman/Base.lproj/Main.storyboard
+++ b/doodalman/Base.lproj/Main.storyboard
@@ -864,11 +864,11 @@
                         <viewControllerLayoutGuide type="bottom" id="kga-Nd-6NS"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Pyw-Ea-0tE">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="559"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FZm-Ua-osW">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="519"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="627"/>
                                 <subviews>
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ign-D2-4H8" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="771.5"/>
@@ -1046,7 +1046,7 @@
                                 </constraints>
                             </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xnH-Hm-Mss">
-                                <rect key="frame" x="0.0" y="519" width="375" height="40"/>
+                                <rect key="frame" x="0.0" y="627" width="375" height="40"/>
                                 <color key="backgroundColor" red="0.99215686274509807" green="0.29411764705882354" blue="0.45098039215686275" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="kek-Dz-4KQ"/>
@@ -1119,7 +1119,7 @@
                         <viewControllerLayoutGuide type="bottom" id="m85-ek-HWA"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="d6E-QG-SbC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="559"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bCu-Ci-Y2q">
@@ -1391,6 +1391,142 @@
             </objects>
             <point key="canvasLocation" x="-314" y="-619"/>
         </scene>
+        <!--Filter Table View Controller-->
+        <scene sceneID="ooI-WZ-Lgz">
+            <objects>
+                <tableViewController id="Sy0-9I-5yM" customClass="DDMFilterTableViewController" customModule="doodalman" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="jfm-Ot-lFP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="559"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <color key="sectionIndexBackgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <sections>
+                            <tableViewSection headerTitle="기간" id="CK6-Y9-LMg">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="dST-hA-W7q">
+                                        <rect key="frame" x="0.0" y="56" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dST-hA-W7q" id="yxa-Kp-KoR">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AFY-go-63T">
+                                                    <rect key="frame" x="22" y="8" width="327" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <nil key="textColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="가격" id="WJb-Oy-YhD">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="dWq-dg-tqa">
+                                        <rect key="frame" x="0.0" y="157" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dWq-dg-tqa" id="qSx-yg-z62">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="Sy0-9I-5yM" id="hfc-uA-meB"/>
+                            <outlet property="delegate" destination="Sy0-9I-5yM" id="ZGG-mW-bys"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <outlet property="startDate" destination="AFY-go-63T" id="hHk-jj-mzv"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Tt-Gh-SKF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1911.2" y="989.95502248875573"/>
+        </scene>
+        <!--Filter View Controller-->
+        <scene sceneID="iyx-NH-eml">
+            <objects>
+                <viewController storyboardIdentifier="DDMFilter" id="rm8-ZV-KUo" customClass="DDMFilterViewController" customModule="doodalman" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="uEe-UO-Qou"/>
+                        <viewControllerLayoutGuide type="bottom" id="Qdz-yn-wXp"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5gL-Zu-PNT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="p7U-n7-RuL">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="nxS-oA-KZk"/>
+                                    <barButtonItem title="취소" id="HEH-hq-mY4">
+                                        <connections>
+                                            <action selector="closeFilter:" destination="rm8-ZV-KUo" id="eBG-ic-9v6"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rNG-AR-rbW">
+                                <rect key="frame" x="0.0" y="72" width="375" height="559"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <connections>
+                                    <segue destination="Sy0-9I-5yM" kind="embed" id="rRD-YY-Ja2"/>
+                                </connections>
+                            </containerView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="TkG-Ys-gHZ">
+                                <rect key="frame" x="0.0" y="627" width="375" height="40"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kp4-e7-O8t">
+                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="40"/>
+                                        <color key="backgroundColor" red="0.92146831750000002" green="0.92162626979999995" blue="0.92145836349999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="초기화">
+                                            <color key="titleColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="clearFilter:" destination="rm8-ZV-KUo" eventType="touchUpInside" id="okw-M9-hSK"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="21B-Hb-z4a">
+                                        <rect key="frame" x="187.5" y="0.0" width="187.5" height="40"/>
+                                        <color key="backgroundColor" red="0.99215686270000003" green="0.29411764709999999" blue="0.45098039220000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="적용">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="saveFilter:" destination="rm8-ZV-KUo" eventType="touchUpInside" id="JjP-wU-qbW"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="1Ch-ra-y0o"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Qdz-yn-wXp" firstAttribute="top" secondItem="TkG-Ys-gHZ" secondAttribute="bottom" id="JsE-gc-rpa"/>
+                            <constraint firstItem="TkG-Ys-gHZ" firstAttribute="centerX" secondItem="5gL-Zu-PNT" secondAttribute="centerX" id="StC-4I-8Mz"/>
+                            <constraint firstItem="TkG-Ys-gHZ" firstAttribute="width" secondItem="5gL-Zu-PNT" secondAttribute="width" id="WVg-2L-xqR"/>
+                            <constraint firstItem="TkG-Ys-gHZ" firstAttribute="leading" secondItem="5gL-Zu-PNT" secondAttribute="leadingMargin" constant="-16" id="cBB-H9-2KD"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="clearButton" destination="kp4-e7-O8t" id="TRn-Ui-Di1"/>
+                        <outlet property="closeButton" destination="HEH-hq-mY4" id="Pmw-Ut-Ozm"/>
+                        <outlet property="filterTableView" destination="rNG-AR-rbW" id="jm5-4O-Ql2"/>
+                        <outlet property="saveButton" destination="21B-Hb-z4a" id="Zv5-vP-Gn6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WOp-nu-AAq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1047.2" y="954.87256371814101"/>
+        </scene>
         <!--Map View Controller-->
         <scene sceneID="dkw-n1-WVY">
             <objects>
@@ -1451,7 +1587,7 @@
                         <viewControllerLayoutGuide type="bottom" id="v5i-Ll-VFZ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="CYr-Ss-Sbh">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="559"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" keyboardDismissMode="interactive" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="77" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sSK-aA-JY8">
@@ -1518,7 +1654,7 @@
                                 </connections>
                             </tableView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LrD-kx-fWp">
-                                <rect key="frame" x="0.0" y="515" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
                                     <barButtonItem style="plain" id="MVX-By-TdI">
@@ -1650,7 +1786,7 @@
         <image name="photoPlaceHolder" width="750" height="540"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="oRq-6e-c6u"/>
+        <segue reference="VbK-CL-GSR"/>
         <segue reference="aM6-N5-fl5"/>
     </inferredMetricsTieBreakers>
 </document>
